--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Farmaan Syed - AI Engineer / Data Scientist
+tstitle: Farmaan Syed - AI Engineer / Data Scientist
 description: Early-career professional passionate about AI and data science.
 baseurl: ""
 url: "https://farmaan10.github.io"
@@ -9,10 +9,9 @@ header_pages:
   - about.md
   - experience.md
   - projects.md
-  - research.md
   - other-experiences.md
 
 minima:
   social_links:
-    github: yourusername
-    linkedin: yourusername
+    github: https://github.com/Farmaan10
+    linkedin: https://www.linkedin.com/in/farmaan-syed-21a27617b/
