--- a/_config.yml
+++ b/_config.yml
@@ -13,5 +13,5 @@ header_pages:
 
 minima:
   social_links:
-    github: https://github.com/Farmaan10
-    linkedin: https://www.linkedin.com/in/farmaan-syed-21a27617b/
+    github: Farmaan10
+    linkedin: farmaan-syed-21a27617b/
